[package]
name = "humanize"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Convert common things to humanized output. Parse input text in a human-friendly way."
keywords = ["humanize", "human", "parse", "format", "no_std"]
documentation = "https://endoli.github.io/humanize.rs"
homepage = "https://github.com/endoli/humanize.rs"
repository = "https://github.com/endoli/humanize.rs"
edition = "2021"

[dependencies]
icu_locid = "1"
